# voxscribe

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
docs/superpowers/specs/: 2026-03-20-notetaker-cli-design.md
git-hooks/: pre-commit  pre-push
src/: config.rs  download.rs  main.rs  output.rs  recorder.rs  transcriber.rs  ui.rs
